# hooks

./: .gitignore  README.md  hooks.example.json  install.ps1  pyproject.toml  run_hook.py
.codex/: hooks.example.json
.codex/hooks/: run_hook.py
.codex/hooks/scripts/: post_tool_cleaner.py  pre_tool_dangerous_commands.py  pre_tool_security.py  ruff_support.py
.codex/hooks/tests/: conftest.py  test_post_tool_cleaner.py  test_pre_tool_dangerous_commands.py  test_pre_tool_dangerous_commands_main.py  test_pre_tool_security.py  test_pre_tool_security_main.py  test_ruff_support.py  test_run_hook.py  test_session_stop.py
.copilot/hooks/: hooks.example.json  run_hook.py
.copilot/hooks/scripts/: pre_tool_dangerous_commands.py  session_stop.py
.copilot/hooks/tests/: conftest.py  test_post_tool_cleaner.py  test_pre_tool_dangerous_commands.py  test_pre_tool_dangerous_commands_main.py  test_pre_tool_security.py  test_run_hook.py  test_session_stop.py
.pi/agent/extensions/: agent-hooks.ts
scripts/: post_tool_cleaner.py  pre_tool_dangerous_commands.py  pre_tool_security.py
src/agent_hooks/: __init__.py  bootstrap.py  common.py  dangerous_commands.py  post_tool_cleaner.py  ruff_support.py  security.py  session_stop.py
tests/: test_pre_tool_dangerous_commands.py  test_pre_tool_dangerous_commands_main.py  test_pre_tool_security_main.py  test_ruff_support.py  test_run_hook.py
